--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <link rel="stylesheet" href="build/css/vendor.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title></title>
+    <title>Alarm Clock</title>
   </head>
   <body>
-
+    <h3>Well look at the time! </h3>
+    <h3 id="time"></h3>
+    <form class="alarm" action="index.html" method="post">
+      <label for="alarm">Set your alarm</label>
+      <input type="time" name="alarm" id="alarm" value="">
+      <button type="submit" name="submit">Set</button>
+    </form>
+    <div class="" id="output">
+    </div>
   </body>
 </html>
